--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "director": "~1.1.3",
     "handlebars": "~1.0.6-2",
-    "stylus": "~0.28.2"
-  }
+    "stylus": "~0.28.2",
+    "nib": "~0.7.0"
+  },
+  "devDependencies": {}
 }
