--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
   "author": "Thorsten Lorenz <thlorenz@gmx.de> (http://thorstenlorenz/wordpress.com)",
   "license": "MIT",
   "dependencies": {
-    "director": "~1.1.3",
     "handlebars": "~1.0.6-2",
     "stylus": "~0.28.2",
-    "nib": "~0.7.0"
+    "nib": "~0.7.0",
+    "hotplates": "~0.4.0",
+    "request": "~2.10.0",
+    "marked": "~0.2.5"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "should": "~1.1.0",
+    "mocha": "~1.3.2"
+  }
 }
