--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "nib": "~0.7.0",
     "hotplates": "~0.4.0",
     "request": "~2.10.0",
-    "marked": "~0.2.5"
+    "marked": "~0.2.5",
+    "npmlog": "0.0.2",
+    "director": "~1.1.3"
   },
   "devDependencies": {
     "should": "~1.1.0",
