--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "request": "~2.10.0",
     "marked": "~0.2.5",
     "npmlog": "0.0.2",
-    "director": "~1.1.3"
+    "director": "~1.1.3",
+    "require-all": "0.0.4"
   },
   "devDependencies": {
     "should": "~1.1.0",
