--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "should": "~1.1.0",
-    "mocha": "~1.3.2"
+    "mocha": "~1.3.2",
+    "cdir": "~0.1.2"
   }
 }
