--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "marked": "~0.2.5",
     "npmlog": "0.0.2",
     "director": "~1.1.3",
-    "require-all": "0.0.4"
+    "require-all": "0.0.4",
+    "eventemitter2": "~0.4.9"
   },
   "devDependencies": {
     "should": "~1.1.0",
