--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "handlebars": "~1.0.6-2",
     "stylus": "~0.28.2",
     "nib": "~0.7.0",
-    "hotplates": "~0.4.0",
     "request": "~2.10.0",
     "marked": "~0.2.5",
     "npmlog": "0.0.2",
     "director": "~1.1.3",
     "require-all": "0.0.4",
-    "eventemitter2": "~0.4.9"
+    "eventemitter2": "~0.4.9",
+    "hotplates": "~0.5.0"
   },
   "devDependencies": {
     "should": "~1.1.0",
