--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "should": "~1.1.0",
     "mocha": "~1.3.2",
-    "cdir": "~0.1.2"
+    "cdir": "~0.1.2",
+    "underscore": "git://github.com/amdjs/underscore.git"
   }
 }
