--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
     "should": "~1.1.0",
     "mocha": "~1.3.2",
     "cdir": "~0.1.2",
-    "underscore": "git://github.com/amdjs/underscore.git"
+    "underscore": "~1.3.3"
   }
 }
