--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "eventemitter2": "~0.4.9",
     "hotplates": "~0.5.0",
     "dog": "~0.0.6",
-    "underscore": "~1.3.3"
+    "underscore": "~1.3.3",
+    "runnel": "0.0.5"
   },
   "devDependencies": {
     "should": "~1.1.0",
     "mocha": "~1.3.2",
     "cdir": "~0.1.2",
-    "underscore": "~1.3.3"
   }
 }
