--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "require-all": "0.0.4",
     "eventemitter2": "~0.4.9",
     "hotplates": "~0.5.0",
-    "dog": "~0.0.6",
     "underscore": "~1.3.3",
-    "runnel": "0.0.5"
+    "runnel": "0.0.5",
+    "dog": "0.0.12"
   },
   "devDependencies": {
     "should": "~1.1.0",
