--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thlorenz.com",
-  "version": "0.0.0-8",
+  "version": "0.0.0-10",
   "description": "Source of thlorenz.com website.",
   "main": "app.js",
   "engines": {
@@ -8,6 +8,10 @@
     "npm": "~1.1.40"
   },
   "subdomain": "thlorenz",
+  "domains": [
+    "thlorenz.com",
+    "www.thlorenz.com"
+  ],
   "scripts": {
     "test": "mocha",
     "start": "app.js"
@@ -36,7 +40,8 @@
     "hotplates": "~0.5.0",
     "underscore": "~1.3.3",
     "runnel": "0.0.5",
-    "dog": "0.0.12"
+    "dog": "0.0.12",
+    "requirejs": "~2.0.6"
   },
   "devDependencies": {
     "should": "~1.1.0",
