--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "test": "mocha",
-    "start": "app.js dev"
+    "start": "app.js"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,7 @@
     "blog",
     "stackoverflow"
   ],
-  "author": "Thorsten Lorenz <thlorenz@gmx.de> (http://thorstenlorenz/wordpress.com)",
+  "author": "Thorsten Lorenz <thlorenz@gmx.de> (http://thlorenz.com)",
   "license": "MIT",
   "dependencies": {
     "handlebars": "~1.0.6",
@@ -41,7 +41,7 @@
     "underscore": "~1.3.3",
     "runnel": "0.0.5",
     "dog": "0.0.12",
-    "requirejs": "~2.0.6"
+    "requirejs": "~2.0.0"
   },
   "devDependencies": {
     "should": "~1.1.0",
