serving site before initializing everything in order to please nodejitsu being in a hurry

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thlorenz.com",
-  "version": "0.1.0",
+  "version": "0.1.0-2",
   "description": "Source of thlorenz.com website.",
   "main": "app.js",
   "engines": {
