--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "test": "mocha",
-    "start": "app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
