--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   ],
   "author": "Thorsten Lorenz <thlorenz@gmx.de> (http://thlorenz.com)",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "express": "~3.1.0",
+    "browserify": "~1.17.3"
+  },
   "devDependencies": {}
 }
