--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "license": "MIT",
   "dependencies": {
     "express": "~3.1.0",
-    "browserify": "~1.17.3"
+    "browserify": "~1.17.3",
+    "npmlog": "0.0.2",
+    "hbs": "~2.0.1"
   },
   "devDependencies": {}
 }
