--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "browserify": "~1.17.3",
     "npmlog": "0.0.2",
     "hbs": "~2.0.1",
-    "browserify-shim": "~0.6.0"
+    "browserify-shim": "~0.6.0",
+    "ansicolors": "~0.2.1"
   },
   "devDependencies": {}
 }
