--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "www.thlorenz.com"
   ],
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -33,7 +33,10 @@
     "npmlog": "0.0.2",
     "hbs": "~2.0.1",
     "browserify-shim": "~0.6.0",
-    "ansicolors": "~0.2.1"
+    "ansicolors": "~0.2.1",
+    "clone": "~0.1.5"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "~0.7.2"
+  }
 }
