--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "hbs": "~2.0.1",
     "browserify-shim": "~0.6.0",
     "ansicolors": "~0.2.1",
-    "clone": "~0.1.5"
+    "clone": "~0.1.5",
+    "dog": "~0.1.1"
   },
   "devDependencies": {
     "nodemon": "~0.7.2"
