--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "ansicolors": "~0.2.1",
     "clone": "~0.1.5",
     "dog": "~0.1.1",
-    "moment": "~2.0.0"
+    "moment": "~2.0.0",
+    "request": "~2.12.0"
   },
   "devDependencies": {
     "nodemon": "~0.7.2"
