--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "clone": "~0.1.5",
     "dog": "~0.1.1",
     "moment": "~2.0.0",
-    "request": "~2.12.0"
+    "request": "~2.12.0",
+    "uglify-js": "~2.2.5"
   },
   "devDependencies": {
     "nodemon": "~0.7.2"
