updating some more things to be ignored during deploy

--- a/.npmignore
+++ b/.npmignore
@@ -1,2 +1,7 @@
 static/js/main.built.js
 thlorenz.com-blog/
+public/views/avatar-fullsize.jpeg
+public/views/avatar.ico
+public/css/bootstrap-responsive.css
+public/css/bootstrap.css
+public/css/bootstrap.orig.css
