--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "www.thlorenz.com"
   ],
   "scripts": {
-    "start": "node app.js",
+    "start": "node app.js --dev",
     "dev": "nodemon --ext '.js|.hbs' app.js --dev"
   },
   "repository": {
