--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thlorenz.com",
-  "version": "0.1.0-19",
+  "version": "0.1.0-20",
   "description": "Source of thlorenz.com website.",
   "main": "app.js",
   "engines": {
@@ -16,7 +16,7 @@
     "start": "node app.js",
     "dev": "nodemon --ext '.js|.hbs' app.js --dev",
     "css": "cd ./public/css/ && cleancss -o bootstrap.min.css bootstrap.css && cleancss -o bootstrap-responsive.min.css bootstrap-responsive.css && cleancss -o main.min.css main.css cd ../..",
-    "deploy": "npm css && jitsu deploy"
+    "deploy": "npm run css && jitsu deploy"
   },
   "repository": {
     "type": "git",
