--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thlorenz.com",
-  "version": "0.2.0-11",
+  "version": "0.2.0-12",
   "description": "Source of thlorenz.com website.",
   "main": "app.js",
   "engines": {
@@ -42,7 +42,8 @@
     "request": "~2.12.0",
     "uglify-js": "~2.2.5",
     "dog": "~0.2.0",
-    "clean-css": "~0.10.1"
+    "clean-css": "~0.10.1",
+    "rss": "0.0.4"
   },
   "devDependencies": {
     "nodemon": "~0.7.2"
