--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thlorenz.com",
-  "version": "0.2.0-15",
+  "version": "0.2.0-16",
   "description": "Source of thlorenz.com website.",
   "main": "app.js",
   "engines": {
@@ -32,10 +32,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "~3.1.0",
-    "browserify": "~1.17.3",
     "npmlog": "0.0.2",
     "hbs": "~2.0.1",
-    "browserify-shim": "~0.6.0",
     "ansicolors": "~0.2.1",
     "clone": "~0.1.5",
     "moment": "~2.0.0",
@@ -43,7 +41,9 @@
     "uglify-js": "~2.2.5",
     "dog": "~0.2.0",
     "clean-css": "~0.10.1",
-    "rss": "0.0.4"
+    "rss": "0.0.4",
+    "browserify-shim": "~2.0.1",
+    "browserify": "~2.4.0"
   },
   "devDependencies": {
     "nodemon": "~0.7.2"
