--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thlorenz.com",
-  "version": "0.3.0-8",
+  "version": "0.3.0-10",
   "description": "Source of thlorenz.com website.",
   "main": "app.js",
   "engines": {
@@ -46,6 +46,7 @@
     "dog": "~0.3.0"
   },
   "devDependencies": {
-    "nodemon": "~0.7.2"
+    "nodemon": "~0.7.2",
+    "jitsu": "~0.13.9"
   }
 }
