--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "rss": "0.0.4",
     "browserify-shim": "~2.0.3",
     "browserify": "~2.12.0",
-    "dog": "~0.3.1"
+    "dog": "~0.3.1",
+    "request-all-pages": "~0.3.1"
   },
   "devDependencies": {
     "nodemon": "~0.7.2",
